# colorimgdiff

./: .gitignore  .travis.yml  BaseComparator.cpp  BaseComparator.hpp  CMakeLists.txt  LabComparator.cpp  LabComparator.h  LabComparator.hpp  LumaComparator.cpp  LumaComparator.h  LumaComparator.hpp  README.md  main.cpp
.github/workflows/: cpp_cmake.yml
include/: BaseComparator.hpp  LabComparator.hpp  LumaComparator.hpp
src/: BaseComparator.cpp  main.cpp
